# pibot

./: .env.example  .gitignore  AGENTS.md  README.md  article.md  package-lock.json  package.json
.github/workflows/: parakeet-cpp-stt-release.yml
data/voices/: elevenlabs-pibot-reference-de.txt
esp32/: platformio.ini
esp32/src/: main.cpp
native/parakeet-cpp-stt/: CMakeLists.txt  README.md
native/parakeet-cpp-stt/patches/: backend.cpp
native/parakeet-cpp-stt/src/: cli.cpp  main.cpp
native/pibot-stt/: README.md
native/pibot-stt/src/: main.rs
public/: admin.html  index.html  style.css
scripts/: benchmark-stt.mjs  build-native.mjs  build-qwen3-tts-cpp.mjs  dev.mjs  parakeet-stt-worker.py
src/: client.ts  server.ts  types.ts
src/client/: barge-in.ts  index.ts  robot-server.ts
src/client/components/: setup-panel.ts  spotify-panel.ts
src/client/tools/: index.ts  speech.ts  spotify.ts
src/server/: auth.ts  config.ts  events.ts  harness.ts  http-server.ts  index.ts  llama.ts  logger.ts  memory-store.ts  robot-client.ts  shutdown.ts  stt.ts  tts.ts  websocket-server.ts
src/server/tools/: context.ts  homeassistant.ts  index.ts  motor.ts  music-assistant.ts  photo.ts  spotify.ts  websearch.ts
